# GOLEM-AI-FILE-MANAGER

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOLEM_Master_Reference.md  LICENSE  README.md  READY_TO_SHIP.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v2.1.md  build.bat  build.ps1  build_linux_installer.sh  build_macos.sh  build_macos_installer.sh  build_windows_installer.ps1  demo_ui.py  golem.spec  golem_macos.spec  golem_motion_reference.html  golem_webview.py  golem_webview.spec  installer.py  installer.spec  main.py  pre-commit-config.yaml  pyproject.toml  release.ps1  release_macos.sh  release_windows.ps1  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/agents/: README.md  golem-debug.md  golem-functionality.md  golem-security.md  golem-ui.md
.claude/commands/: prod-check.md
.claude/workflows/: prod-readiness.js
.github/workflows/: ci.yml  release.yml
assets/: golem.desktop
assets/legal/: terms_of_service.md
docs/: ARCHITECTURE.md  CONCURRENCY.md  CONFIGURATION.md  DATA_MODEL.md  DOWNLOAD_LINUX.md  DOWNLOAD_MACOS.md  DOWNLOAD_WINDOWS.md  FAQ.md  INSTALLATION.md  OPERATIONS.md  PROVIDERS.md  RELEASE.md  SECURITY.md  UI_STYLE.md  USAGE.md  VM_BETA_TESTING.md  WINDOWS_VM_RELEASE_GUIDE.md
golem/: __init__.py  ai.py  app.py  chunker.py  config.py  constants.py  embeddings.py  errors.py  extractor.py  hybrid_search.py  indexer.py  legal.py  organizer.py  scanner.py  search.py  summarizer.py  tray.py  ui.py  ui_anim.py  ui_components.py  ui_icons.py  ui_onboarding.py  ui_search.py  ui_theme.py  ui_window.py  undo.py  utils.py  vault_writer.py  vector_store.py  watcher.py  watcher_events.py
scripts/: run_deep_tests.ps1  smoke_sandbox.py  smoke_test_e2e.sh  smoke_test_linux.sh  smoke_test_windows.ps1  write_payload_manifest.py
tests/: conftest.py  test_ai.py  test_app_lifecycle.py  test_chunker.py  test_chunks_indexer.py  test_chunks_schema.py  test_core.py  test_embeddings.py  test_encryption.py  test_extractor_fuzz.py  test_hybrid_search.py  test_installer.py  test_integration.py  test_load.py  test_packaging.py  test_runtime.py  test_smoke.py  test_summarizer.py  test_tray.py  test_ui_components.py  test_ui_logic.py  test_undo.py  test_vector_store.py  test_watcher_event.py
ui/: app.js  index.html  style.css
