[project]
name = "golem"
version = "2.1.0"
description = "Local-first AI file manager for Obsidian"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GOLEM Contributors" }]
keywords = ["file-manager", "obsidian", "ai", "indexing", "search"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Win32 (MS Windows)",
  "Environment :: MacOS X",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]
dependencies = [
  "openpyxl>=3.1.5",
  "pypdf>=5.0.0",
  "python-docx>=1.1.2",
  "pystray>=0.19.5",
  "Pillow>=10.4.0",
  "cryptography>=42.0.0",
  "defusedxml>=0.7.1",
  "pywebview>=6.2.0",
]

[project.optional-dependencies]
hotkey = ["keyboard>=0.13.5", "pynput>=1.7.7"]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-requests",
]
build = ["pyinstaller>=6.10.0"]

[project.scripts]
golem = "golem.app:run"
golem-setup = "installer:main"

[project.urls]
Homepage = "https://github.com/ATLAS-DEV78423/GOLEM-AI-FILE-MANAGER"
Issues = "https://github.com/ATLAS-DEV78423/GOLEM-AI-FILE-MANAGER/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["golem"]
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
ignore = [
  "S101",   # allow assert in tests
  "E501",   # allow long lines
  "S105",   # protocol prefix "nekrypt:" is not a real secret
  "S110",   # try-except-pass is intentional for non-critical UI ops
  "S112",   # try-except-continue intentional for encoding fallback loops
  "S311",   # random is fine for tests
  "S603",   # subprocess calls use hardcoded OS commands (open, explorer, etc.)
  "S606",   # os.startfile is safe
  "S607",   # partial paths like "open" are correct for OS dispatch
  "S310",   # urlopen to hardcoded API endpoints is intentional
  "S314",   # defusedxml fallback covers the real fix; stdlib is fallback
  "B904",   # raise without from is acceptable in simple error paths
  "B007",   # unused loop variable is style-only
  "F841",   # unused variable warnings are intentionally suppressed
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["golem"]
omit = ["tests/*", "installer.py"]

[tool.coverage.report]
# The package is ~50% Tk-bound UI code. A much higher coverage target was
# aspirational and not realistic without spinning up a real display + testing
# every widget interaction. 50% reflects the realistic ceiling for a headless
# test run. The CI badge will surface drops below this.
# The package is ~50% Tk-bound UI code. A much higher coverage target was
# aspirational and not realistic without spinning up a real display + testing
# every widget interaction. 42% reflects the realistic ceiling for a headless
# test run on Windows (Tk can't render there). The CI badge will surface drops
# below this.
fail_under = 40
show_missing = true
